<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="bottom_menu_me">记录评价</string>
    <string name="bottom_menu_discovery">咨询专家</string>
    <string name="bottom_menu_addressbook">信息更新</string>
    <string name="bottom_menu_wechat">查询流程</string>
    <string name="app_name">故障处理查询系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="chaxun">查询</string>
    <string name="biaoti">电力分公司故障处理查询系统</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="sss" />
    <string name="title_activity_liucheng">LiuchengActivity</string>
    <string name="title_activity_case">CaseActivity</string>
    <string name="title_activity_zhuanjia">zhuanjia</string>
    <string name="sw">浏览全文</string>
    <string name="chaliucheng">查询流程</string>
    <string name="chaff">查询方法</string>
    <string name="chacase">查询案例</string>
    <string name="guanjianzi">关键字：</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_pingjia">PingjiaActivity</string>
    <string name="title_activity_pjhz">PjhzActivity</string>
    <string name="title_activity_zhuanjia1">Zhuanjia1Activity</string>
    <string name="clear_content">取消</string>
    <string name="jump_to_wechat">跳转至微信</string>
    <string name="edit_text_hint">请输入好友微信号</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hint_operator_name">你好</string>
    <string name="hello">Hello World, Date!</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="cancel">取 消</string>
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="resetpwd_fail">密码修改失败，请重新尝试！</string>
    <string name="resetpwd_success">密码修改成功！</string>
    <string name="login_success">登陆成功！</string>
    <string name="cancel_success">注销成功！</string>
    <string name="login_fail">登录失败！请输入正确的用户名与密码！</string>
    <string name="cancel_fail">注销失败！请输入正确的用户名与密码！</string>
    <string name="name_not_exist">不存在，请重新输入！</string>
    <string name="user_login_success">登录，欢迎光临！</string>
    <string name="name_already_exist">已存在，请重新输入！</string>
    <string name="user_name">请输入用户名/电话号</string>
    <string name="password">请输入密码</string>
    <string name="forget_code">忘记密码</string>
    <string name="enter">登 录</string>
    <string name="resgister">注册账号</string>
    <string name="qq_enter">QQ登陆</string>
    <string name="next">下 一 步</string>
    <string name="resi">注册</string>
    <string name="register_name">用户名：</string>
    <string name="name_explain">用户名只可以是字母、数字组成;不可带有汉字、字符等</string>
    <string name="register_code">密码：</string>
    <string name="register_code_explain">密码只可以是字母、数字组成;不可少于六位数</string>
    <string name="register_code_two">确认密码：</string>
    <string name="User_name_cannot_be_empty">手机号不能为空!</string>
    <string name="Password_cannot_be_empty">验证码不能为空!</string>
    <string name="Confirm_password_cannot_be_empty">密码不能为空!</string>
    <string name="Two_input_password">两次密码不同!</string>
    <string name="phone_login">无密码登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="action_settings">Settings</string>
    <string name="landing">登     录</string>
    <string name="validateNum">获取验证码</string>
    <string name="validate">验证码</string>
    <string name="tel">请输入手机号码</string>

</resources>