<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE xml>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <!-- android:layout_weight="4" -->

            <RelativeLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/biaoti" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@drawable/logo"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp" >

                    <Button
                        android:id="@+id/button1"
                        style="?android:attr/buttonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/sw"
                        android:textSize="@dimen/sw" />

                    <Button
                        android:id="@+id/button2"
                        style="?android:attr/buttonStyle"
                        android:layout_width="69dp"
                        android:layout_height="wrap_content"
                        android:text="@string/chaliucheng"
                        android:textSize="@dimen/sw" />

                    <Button
                        android:id="@+id/button3"
                        style="?android:attr/buttonStyle"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/chaff"
                        android:textSize="@dimen/sw" />

                    <Button
                        android:id="@+id/button4"
                        style="?android:attr/buttonStyle"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/chacase"
                        android:textSize="@dimen/sw" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/guanjianzi" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/textView3"
                    android:ems="10"
                    android:inputType="textAutoComplete" >

                    <requestFocus />
                </EditText>

                <WebView
                    android:id="@+id/webView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgv1"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="对故障点拍照"
                    android:textColor="#FF212121"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信登录" />

                <TextView
                    android:id="@+id/main_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/view4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="这是第四个选项卡"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>

</TabHost>