<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main_menuContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2.25" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line_light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_bottomMenu_chat"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_chat"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/ic_menu_chat_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_chat"
                    style="@style/ButtomMenuTv"
                    android:text="@string/bottom_menu_wechat" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_addressBook"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_addressbook"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/ic_menu_addressbook_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_addressbook"
                    style="@style/ButtomMenuTv"
                    android:text="@string/bottom_menu_addressbook" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_discovery"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_discovery"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/ic_menu_discovery_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_discovery"
                    style="@style/ButtomMenuTv"
                    android:text="@string/bottom_menu_discovery" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomMenu_me"
            style="@style/ButtomMenuItemLayout" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/imgv_bottomMenu_me"
                    style="@style/ButtomMenuImgv"
                    android:src="@drawable/ic_menu_me_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_bottomMenu_me"
                    style="@style/ButtomMenuTv"
                    android:text="@string/bottom_menu_me" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>